# Small_LLM_and_tokenizer

./: .gitignore  README.md  pyproject.toml
Notebooks/: gdm_lab_2_1_preprocess_data.ipynb  gdm_lab_2_2_tokenize_texts_into_characters_and_words.ipynb  gdm_lab_2_3_tokenize_texts_into_subword_tokens.ipynb  gdm_lab_2_4_implement_a_bpe_tokenizer.ipynb  gdm_lab_2_5_experiment_with_embeddings.ipynb  gdm_lab_2_6_train_an_slm_with_your_bpe_tokenizer.ipynb
docs/: index.html
examples/: 01_preprocess.py  02_tokenize_basic.py  03_learn_bpe.py  04_train_tokenizer.py  05_embeddings.py  06_train_slm.py
src/small_llm/: __init__.py  data.py  embeddings.py  model.py  preprocess.py
src/small_llm/tokenization/: __init__.py  basic.py  bpe.py
tests/: test_embeddings.py  test_preprocess.py  test_tokenization.py
