[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "small-llm"
version = "0.1.0"
description = "A small, self-contained toolkit for text preprocessing, BPE tokenization, embeddings, and training a tiny language model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Enuh Blaise", email = "blaisonyl@gmail.com" }]
keywords = ["nlp", "tokenizer", "bpe", "language-model", "embeddings", "education", "research"]

# Core dependencies keep the tokenizer/preprocessing usable with nothing heavy.
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# Loading the sample dataset and plotting.
data = ["pandas>=2.0"]
viz = ["matplotlib>=3.7", "scikit-learn>=1.3"]
# Everything needed to train the small language model.
train = ["keras>=3.0", "jax[cpu]>=0.4", "tqdm>=4.66"]
# Convenience: install it all.
all = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "keras>=3.0",
    "jax[cpu]>=0.4",
    "tqdm>=4.66",
]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/EnuhBlaise/Small_LLM_and_tokenizer"
Repository = "https://github.com/EnuhBlaise/Small_LLM_and_tokenizer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
